--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 /* banner style starts form here */
 .banner-container{
     height: 100vh;
-    background-image: url('/assets/image/background.jpg'),linear-gradient(rgba(77, 52, 176, 0.3),rgba(0, 0, 0, 0.4));
+    background-image: url("/assets/image/background.jpg"),linear-gradient(rgba(77, 52, 176, 0.3),rgba(0, 0, 0, 0.4));
     background-blend-mode: overlay;
     background-position: center;
     background-repeat: no-repeat;
@@ -54,4 +54,25 @@
 .bg-primary{
     background-color: red;
     color: white;
+}
+/* main style starts form here */
+.main-container{
+    height: 100vh;
+    background-image: url("/assets/image/footer-bg.png"),linear-gradient(rgba(11, 11, 12, 0.878),rgba(0, 0, 0, 0.838));
+    background-blend-mode: overlay;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.icon{
+    width: 100px;
+    margin-bottom: 20px;
+}
+.box{
+    text-align: center;
+    width: 200px;
+    height: 30px;
+    padding-top: 25px;
+    background-color: white;
+    color: black;
 }
